--- a/index.html
+++ b/index.html
@@ -18,8 +18,9 @@ about: 'about.html'
         <div class="main-header-content inner">
             <h1 class="page-title">{{ site.name }}</h1>
             <h2 class="page-description">
-                {% if site.description %} {{ site.description }}. {% endif %}
-                {% if page.about %} <a href='{{ site.baseurl }}{{ page.about }}'> About me </a> {% endif %}
+                {% if site.description %} {{ site.description }} {% endif %}
+                <p>
+                <a href='{{ site.baseurl }}{{ page.about }}'> About</a><a href='{{ site.baseurl }}{{ page.entires }}'> Entires</a><a href='{{ site.baseurl }}{{ page.contact }}'> Contact</a>
             </h2>
         </div>
     </div>
