--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 layout: default
 title: Home
 cover: false
-about: 'about.html'
+about: 'about/index.html'
+entries: 'entries/index.html'
+contact: 'contact/index.html'
 ---
 
 <header class="main-header {% if page.cover %}" style="background-image: url({{ page.cover }}) {%else%}no-cover{% endif %}">
