Added hardspaces for vanity

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ contact: 'contact/index.html'
             <h2 class="page-description">
                 {% if site.description %} {{ site.description }} {% endif %}
                 <p>
-                <a href='{{ site.baseurl }}{{ page.about }}'> About</a><a href='{{ site.baseurl }}{{ page.entires }}'> Entires</a><a href='{{ site.baseurl }}{{ page.contact }}'> Contact</a>
+                <a href='{{ site.baseurl }}{{ page.about }}'> About &#160;&#160;&#160;&#160; </a><a href='{{ site.baseurl }}{{ page.entires }}'> Entires &#160;&#160;&#160;&#160; </a><a href='{{ site.baseurl }}{{ page.contact }}'> Contact </a>
             </h2>
         </div>
     </div>
