--- a/index.html
+++ b/index.html
@@ -22,7 +22,9 @@ contact: 'contact/index.html'
             <h2 class="page-description">
                 {% if site.description %} {{ site.description }} {% endif %}
                 <p>
-                <a href='{{ site.baseurl }}{{ page.about }}'> About </a> &#160;&#160;&#160;&#160;  <a href='{{ site.baseurl }}{{ page.entires }}'> Entires </a> &#160;&#160;&#160;&#160; <a href='{{ site.baseurl }}{{ page.contact }}'> Contact </a>
+            </h2>
+            <h2 class="page-description-2">
+                <a href='{{ site.baseurl }}{{ page.about }}'>About</a> &#160;&#160;&#160;&#160;  <a href='{{ site.baseurl }}{{ page.entires }}'>Entires</a> &#160;&#160;&#160;&#160; <a href='{{ site.baseurl }}{{ page.contact }}'>Contact</a>
             </h2>
         </div>
     </div>
