--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@ contact: 'contact/index.html'
     <div class="vertical">
         <div class="main-header-content inner">
             <h1 class="page-title">{{ site.name }}</h1>
-            <h2 class="page-description-2">
+            <p class="page-description">
                 {% if site.description %} {{ site.description }} {% endif %}
-            <p>
+            <p></p>
                 <a href='{{ site.baseurl }}{{ page.about }}'>About</a> &#160;&#160;&#160;&#160;  <a href='{{ site.baseurl }}{{ page.entires }}'>Entires</a> &#160;&#160;&#160;&#160; <a href='{{ site.baseurl }}{{ page.contact }}'>Contact</a>
-            </h2>
+            </p>
         </div>
     </div>
     <a class="scroll-down icon-arrow-left" href="#content" data-offset="-45"><span class="hidden">Scroll Down</span></a>
