--- a/index.html
+++ b/index.html
@@ -20,9 +20,8 @@ contact: 'contact/index.html'
         <div class="main-header-content inner">
             <h1 class="page-title">{{ site.name }}</h1>
             <p class="page-description">
-                {% if site.description %} {{ site.description }} {% endif %}
-            <p></p>
-                <a href='{{ site.baseurl }}{{ page.about }}'>About</a> &#160;&#160;&#160;&#160;  <a href='{{ site.baseurl }}{{ page.entires }}'>Entires</a> &#160;&#160;&#160;&#160; <a href='{{ site.baseurl }}{{ page.contact }}'>Contact</a>
+                {% if site.description %} {{ site.description }} {% endif %}</p>
+                <a href='{{ site.baseurl }}{{ page.about }}'><b>About</b></a> &#160;&#160;&#160;&#160;  <a href='{{ site.baseurl }}{{ page.entires }}'><b>Entires</b></a> &#160;&#160;&#160;&#160; <a href='{{ site.baseurl }}{{ page.contact }}'><b>Contact</b></a>
             </p>
         </div>
     </div>
