--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ contact: 'contact/index.html'
             <p class="page-description">
                 {% if site.description %} {{ site.description }} {% endif %}</p>
             <p class="page-description">
-                <a href='{{ site.baseurl }}{{ page.about }}'><b>About</b></a> &#160;&#160;&#160;&#160;&#160;&#160;  <a href='{{ site.baseurl }}{{ page.entires }}'><b>Entires</b></a> &#160;&#160;&#160;&#160;&#160;&#160; <a href='{{ site.baseurl }}{{ page.contact }}'><b>Contact</b></a>
+                <a href='{{ site.baseurl }}{{ page.about }}'>About</a> &#160;&#160;&#160;&#160;&#160;&#160;  <a href='{{ site.baseurl }}{{ page.entires }}'>Entires</a> &#160;&#160;&#160;&#160;&#160;&#160; <a href='{{ site.baseurl }}{{ page.contact }}'>Contact</a>
             </p>
         </div>
     </div>
