--- a/index.html
+++ b/index.html
@@ -78,16 +78,15 @@ contact: 'contact/index.html'
     {% include pagination.html %}
 
 <div-align="center">
-  <script type="text/javascript">
-    google_ad_client = "ca-pub-3055500016021139";
-    google_ad_slot = "4558210400";
-    google_ad_width = 728;
-    google_ad_height = 90;
+    <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+        <!-- Wide Ad -->
+        <ins class="adsbygoogle"
+             style="display:inline-block;width:728px;height:90px"
+             data-ad-client="ca-pub-3055500016021139"
+             data-ad-slot="7092874407"></ins>
+        <script>
+        (adsbygoogle = window.adsbygoogle || []).push({});
     </script>
-    <!-- Support my Website! -->
-    <script type="text/javascript"
-    src="//pagead2.googlesyndication.com/pagead/show_ads.js">
-  </script>
 </div>
 
 </main>
