Changed posts, made website more professional.

--- a/entires/index.html
+++ b/entires/index.html
@@ -1,6 +1,20 @@
 ---
 layout: page
-title: About me 
+title: Entires
 ---
 
-This is a static page. It could be an 'about page' if you'd like.
+# Non-Fiction
+
+[Should we Quantify Happiness?]
+
+[Personal Constitution: A New Apprenticeship System]
+
+[Edification for Education]
+
+# Fiction
+
+[Eden]
+
+[The Library and the Stars]
+
+[Dawn of Ursa Minor]
